# Fundamentos-de-Ciencia-de-Datos

./: README.md  main.py  pyproject.toml
Parciales/Modelo de Examen 1/: examen_1_consumo_energetico.ipynb
Parciales/Modelo de Examen 2/: datos_madres.xlsx  examen_2_nacimientos.ipynb  nacimientos.csv
Unidad 2 - Manipulacion de Datos/: unidad-2-manipulacion-datos.ipynb  unidad-2-practica.md
Unidad 2 - Manipulacion de Datos/Datasets/: flete_vacunas.parquet
Unidad 2 - Manipulacion de Datos/Practica/: ejercicio_1_flete_vacunas.ipynb  ejercicio_2_incendios.ipynb  ejercicio_3_interpolacion_lineal.ipynb  ejercicio_4_poblacion_argentina.ipynb  ejercicio_5_listings_ba.ipynb  ejercicio_6_regex.ipynb  ejercicio_7_conicet.ipynb  ejercicio_8_incendios_pivot.ipynb  productos.csv  (+6 more)
Unidad 3 - Analisis Exploratorio de Datos/: unidad-3-analisis-exploratorio-datos.ipynb
Unidad 4 -Visualizaciones/: unidad-4-practica.md
Unidad 6 - Ajustes y Modelos/: practica1.py  practica1_ej1_bacterias.ipynb  practica1_ej2_esperanza_vida.ipynb  practica2.py  practica2_ej1_student_data.ipynb  practica2_ej2_teorico.ipynb  practica2_ej3_penguins.ipynb  practica2_ej4_rendimiento.ipynb  practica2_ej5_advertising.ipynb  practica2_ej6_auto.ipynb  practica2_ej7_usa_housing.ipynb  regresion_lineal_interpretacions_residuos.ipynb  unidad-6-ajustes-y-modelos.ipynb
Unidad 7 - Métodos avanzados - Medidas de similaridad y distancia/: ejemplos-apoyo.ipynb  metodos-avanzados-practica-consignas.md  metodos-avanzados-practica-resolucion.ipynb  metodos-avanzados-practica.ipynb  metodos-avanzados.ipynb
(+30 files in other folders)
