[project]
name = "fundamentos-de-ciencias-de-datos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "rapidfuzz>=3.13.0",
    "scipy>=1.15.3",
    "pyarrow>=24.0.0",
    "lxml>=6.1.1",
]
